[IMPROVE] Performance and Filtering Performance: Critical RAM optimization and GC stability fixes - Optimization (LogParserService): Refactored `preCalculateLineOffsets` to [calculateChunkBoundaries](cci:1://file:///d:/desktop/javafx/seeloggyplus/src/main/java/com/seeloggyplus/service/impl/LogParserService.java:241:4-320:5). This eliminates the massive O(N) memory overhead (saving ~150MB startup RAM by not storing every line offset). - Optimization (Lucene): Reduced `IndexWriter` RAM buffer from 256MB to 64MB. This forces more frequent disk flushes, preventing the 1GB+ Heap spike before indexing writes occur. - Optimization (Parser): Reduced processing batch size from 5000 to 1000 to limit per-thread memory pressure. - Stability (MainController): Lowered `INDEXING_THRESHOLD_BYTES` to 20MB. Files larger than this now strictly default to the Disk-Based Indexer. - Stability (GC): Offloaded `System.gc()` to Virtual Threads and added a proactive post-parse GC trigger. This prevents UI freezes ("jerky" behavior) during memory cleanup. - Quality Code: Enforced strict no-wrap policy for method signatures and calls.